--- a/SurveyFinalRcode.Rmd
+++ b/SurveyFinalRcode.Rmd
@@ -256,55 +256,44 @@ society <- left_join(society, households, by="a_hidp")
 
 ## Question 5d
 ```{r}
-# Create new age variable
-society$a_agegr11_dv <- factor(society$a_agegr13_dv)
+# Create two new age variables: one to plot with the five-year intervals, one with categories to compute the chi square statistic
+society$a_agegr5a_dv <- factor(society$a_agegr5_dv) #rename levels for readability
+levels(society$a_agegr5a_dv) <- c("0-4", "5-9", "10-14", "15-19", "20-24", "25-29", "30-34", "35-39",
+  "40-44", "45-49", "50-54", "55-59",  "60-64", "65-69", "70+") 
+society$a_agegr11_dv <- factor(society$a_agegr13_dv) #combine levels so no NAs exist in the contingency table
 levels(society$a_agegr11_dv) <- c(rep("0-17", 2), "18-19",  "20-24",  "25-29",  "30-34",  
-                                  "35-39", "40-44",  "45-49",
-                                  "50-54", "55-59",  rep("60+",2))
+  "35-39", "40-44",  "45-49", "50-54", "55-59",  rep("60+",2)) 
 
-# Create another new age variable
-society$a_agegr5a_dv <- factor(society$a_agegr5_dv)
-
-levels(society$a_agegr5a_dv) <- c(rep("0-14", 3), "15-19", "20-24", "25-29", "30-34", "35-39",
-  "40-44", "45-49", "50-54", "55-59",  rep("60+",3))
-
-# update sampling design 
+# Update sampling design 
 Design <- svydesign(ids=~pidp, strata=~a_strata, data=society, weights=~a_psnenip_xw)
 
-tab <- svytable(~a_agegr11_dv + hh_type, Design) # creates a contingency table of 
+# Create stacked barplot with 5 year interval variable
+tab5 <- svytable(~a_agegr5a_dv + hh_type, Design) # creates a contingency table  
+plot(tab5, xlab = "Age group (years old)", ylab = "Household type", main = "Household types per age category",
+     col=c("steelblue1","sienna1","plum2","goldenrod1"), las = 1, mar = c(3,4,4,2))
+
+# Perform chi square test to evaluate whether age and household type are independent
+svychisq(~a_agegr11_dv + hh_type, design=Design, statistic = "Chisq")
+
+########################################################################
+# >>>>>>> I think this is more interesting with the 5-year variable?
+tab <- svytable(~a_agegr11_dv + hh_type, Design) # creates a contingency table  
 # The Ntotal argument can be either a single number or a data frame whose first column gives the (first-stage) sampling strata and second column the population size in each stratum. In this second case the svytable command performs ???post-stratification???: tabulating and scaling to the population within strata and then adding up the strata.
 ftable(tab)
 summary(ftable(tab))
 
-# plot the relationshp between age categories and household types. 
-png("age_householdtype", width = 1200, height = 500, res = 72)
-plot(tab, xlab = "Age group (years old)", ylab = "Household type", main = "Household types per age category",
-     col=c("steelblue1","sienna1","plum2","goldenrod1"), las = 1, mar = c(3,4,4,2)
-     )
-#legend(x = -1, legend = lvls, col = clrs, lty = 1, pch = 1)
-
-#legend("left", c("Couple with children", "Single parent with children", "couple without children", "single without children"), col =c("steelblue1","plum2","sienna1","goldenrod1"), horiz = T )
+# >>>>>>> this is old
+#png("age_householdtype", width = 1200, height = 500, res = 72)
+#plot(tab, xlab = "Age group (years old)", ylab = "Household type", main = "Household types per age category",
+#     col=c("steelblue1","sienna1","plum2","goldenrod1"), las = 1, mar = c(3,4,4,2)
+#     )
 # BLUE = couple with children
 # PINK = single parent with children
 # ORANGE = couple without children 
 # YELLOW = single without children
-dev.off() 
+dev.off() # >>>>>>> what is this?? 
 
-# try to do Chisq test but this doesn't work:  
-svychisq(~a_agegr11_dv + hh_type, design=Design, statistic = "Chisq")
-#svychisq(~ind+ridreth2, design = nhanes_design, data = nhanes, statistic = "Chisq")
-#svychisq(~BMIcu+ridreth2, nhanes_design, statistic = "Chisq")
-
-# With 5 year interval variable
-tab5 <- svytable(~a_agegr5a_dv + hh_type, Design) # creates a contingency table of 
-plot(tab5, xlab = "Age group (years old)", ylab = "Household type", main = "Household types per age category",
-     col=c("steelblue1","sienna1","plum2","goldenrod1"), las = 1, mar = c(3,4,4,2)
-     )
-
-
-# add percentages
-
- 
+######################################################################## 
 ```
 ## Question 6
 ```{r}
