--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -63,8 +63,7 @@ It is a popular method because when carried out correctly, it leads to (almost) 
 
 Within the data, there is a proportion of sample members that did not personally take part in an interview, potentially leading to nonresponse bias. However, not all of these observations count as nonresponse. Of the 3600 individuals in the sample, there are 459 children under the age of ten. These sample members are enumerated individuals, but ineligible for an interview. Accordingly, the number of eligible individuals in the sample is 3141. Of these 3141 eligible individuals, only 2656 respondents personally completed an interview. This number consists of 2399 adults who performed a full interview and 257 interviews with children. Taken together, 485 cases of (partial) unit nonresponse exist within the subset of eligible individuals.
 
-Moreover, there are 169 sample members for whom a proxy interview was conducted with a close relative or cohabitant (generally a spouse, partner or adult child; Understanding Society, 'Questions about variables', N.D.). Questions answered on the nonresponders' behalf were used to estimate factual information about the nonrespondent. Information about their beliefs is not collected by proxy, and are therefore indicated as missing (item nonresponse). 
-**>>>>>>>>>>No variable about belief included in our dataset!**
+Moreover, there are 169 sample members for whom a proxy interview was conducted with a close relative or cohabitant (generally a spouse, partner or adult child; Understanding Society, 'Questions about variables', N.D.). Questions answered on the nonresponders' behalf were used to estimate factual information about the nonrespondent.
 
 Because (partial) nonresponse can lead to nonresponse bias, it is important to investigate the effect of nonresponse on the estimates generated above. Ideally, we would both compare respondents to partial nonresponse and unit nonresponse. Because of time constraints within this research project, we only investigate how weights may be constructed to adjust for unit nonresponse (see Part III: Estimation).
 
@@ -117,11 +116,9 @@ To find the age groups, a new variable for grouped government office region was 
 
 These categories make sense both in theory and weight-wise (see Figure 3). Children are grouped together (0-14), as are teens and students (15-24). Adults are divided in three categories (25-34, 35-44, 45-64) and the elderly in two (65-74, 75+).
 
-As a final step, a third linear regression analysis was done to find out which groups had higher weights and were thus underrepresented in the sample.  
+As a final step, a third linear regression analysis, with age grouped into the groups described above, was done to find out which groups had the highest weights and were thus underrepresented in the sample.
 
-A regression analysis revealed which groups were under- and overrepresented in the sample (compared to the population of Great Britain), with higher weights being assigned to underrepresented groups. While the weights are mostly decided by the design weights, the post-stratification does alter them.
-
-Females have slightly lower weights than males, indicating that they were overrepresented. For government office region groups, the people from England (excluding London and the Western Midlands) and Wales are the baseline and have the lowest of all weight, and thus were also overrepresented, with Scotland being the most underrepresented, followed by London and then the Western Midlands. With regards to age, the 0-20 group was surprisingly the most overrepresented, forming the baseline for this variable. The 21-30 and 31-40 groups were the most underrepresented and thus had the highest weights, followed by the 80+ group, the 51-70 group, the 41-50 group and finally the 71-80 group, which was by far the most underrepresented.
+Females have slightly lower weights than males, indicating that they were overrepresented. For government office region groups, the people from England (excluding London and the West Midlands) and Wales are the baseline and have the lowest of all weight, and thus were also overrepresented, with Scotland being the most underrepresented, followed by London and then the West Midlands. With regards to age, the 0-14 group was surprisingly the most overrepresented. The 21-30 and 31-40 groups were the most underrepresented and thus had the highest weights, followed by the 80+ group, the 51-70 group, the 41-50 group and finally the 71-80 group, which was by far the most underrepresented.
 
 ### Construction of nonresponse weights (RQ8)
 
@@ -178,7 +175,7 @@ Secondly, to construct a new variable denoting household composition, we used Eu
 
 All three household composition indicators were constructed from the data and included per household into a household composition matrix (see Appendix II: R Script). 
 
-Thirdly, we determided which weighting variable is appropriate to investigate the relationship between age and household composition. We want to use a weight per person (PSN), as it is impossible to calculate age per household. We also want to use the enumeration grid weights (EN), as both age and household composition have no missing values. We want the weights of the first wave (IP), as that is the one we are investigating. Finally, we want to use the stratified weights (XW) rather than the design weights, as we are investigating population values and not sample values. Thus, we want to use the weight a_psnenip_xw, as this is the only weight that covers the correct data in the correct way. 
+Thirdly, we determided which weighting variable is appropriate to investigate the relationship between age and household composition. Many different weights are available for the dataset, each with a different combination of target population, instrument, wave, and weight type. In this study only data from the first wave was used, so a cross-sectional weight for the first wave (IP) should be used. There are two versions of the cross-sectional weight: the design weight and the adjusted weight. As our goal is to estimate population values rather than sample values, the cross-sectional adjusted weight (XW) is appropriate here. The variables of interest in this case are age and several variables containing household information. As age and all relevant household information is known for all sampled individuals, including those that were not interviewed, the method used to obtain the required information is in all likelihood the enumeration grid (EN). Household information is the same for all people within one household, but age is a feature of an individual. The average age per household should not be used,  as the variance within one household can be high, especially when multiple generations live in one household, and taking the average would thus lead to information loss. Finally, as both children and adults are of interest for this question, a weight that includes all individuals in the sample should be used rather than one that includes only children or only adults (PSN). Thus, the weight appropriate for solving this question is a_psnenip_xw, which is the cross-sectional adjusted weight per individuals for the variables in wave 1 that are obtained through the enumeration grid. 
 
 Our objective was to investigate the relationsihp between age and household composition. We therefore plotted the composition of variable hh_type per age category (from a_agegr5_dv). The plot shows the relationships between household_type and age you'd expect, from which we will highlight a few: 
 
@@ -195,12 +192,17 @@ These are obviously just general observations, further statistical investigation
 
 ### Proportion of employed people of working age (RQ4)
 
-43,3% of the population is employed, with a 95% confidence interval of 41.4%-45.2%.
+Another point of interest of this study was the proportion of employed people of working age in the population. To calculate this, a new variable named employ_dv was created which was true for all employed people within the age range of 15-64 and false for all others. Next, a design was made using the svydesign function of the svy package, with the household identifiers ('a_hidp') as cluster identifiers, the given strata ('a_strata') as strata and the adjusted weight 'a_psnenip_xw' as weight. It was found during the investigation of the variables that there were two individuals with a missing value for employment. These were included in the initial design and then removed with the subset() function, as weights were calculated with these included. Finally, the proportion and its confidence interval were calculated using the svymean() and confint() functions.
 
+The estimated proportion of employed people of working age is 46.2%, 95% CI[44.3%, 48.1%]
 
 ### Proportion of employed people of working age, accounting for nonresponse (RQ7)
 
-After post-stratfication (as we also included post-stratification in the previous analysis), 46% of the people who did a personal interview is employed, with a confidence interval of 44.9%-49.3%. For the previous question, where all but two people were included, the estimated proportion of the population that is employed was 43,3%, with a 95% confidence interval of 41.4%-45.2%. As neither mean is contained in the 95% confidence interval of the other, it can be concluded that there is a difference between respondents and non-respondents in employment, with respondents being more likely to be employed than non-respondents. 
+The next step was to evaluate whether there is a difference in estimated proportion of employed adults between the responders and the entire samples. To this end, a variable for nonresponse was created (RQ6) which is 1 for nonresponders and partial responders and 0 when a full (youth) interview was done. The design from RQ4 was then recreated to include this variable. On top of the individuals with missing values for employment, this time all nonresponders and partial responders were excluded using subset() and the new nonresponse variable. The proportion and confidence interval was then calculated once again.
+
+When only the responders are taken into account, the estimated proportion of employed adults in the population is 50.4%, 95% CI[48.2%, 52.6%]. Compared to the estimated proportion calculated in RQ4, 46.2%, 95% CI[44.3%, 48.1%], the proportion estimated from the responders is far higher, to the point that there is no overlap in confidence intervals. This means that responders are more likely to be employed than non-responders. This, however, may be due to the 516 children under the age of ten that were included in the sample. No attempts were made to interview these children, which means they are considered missing data. As is logical, and confirmed by investigation of the employ_dv variable, none of them are employed. Thus, all 516 would be included in the analysis of RQ4 and excluded in the analysis of RQ7.
+
+A third design was created to investigate this hypothesis, which excluded all children below the age of ten. This yielded a population estimate of 52.0%, 95% CI[50.0%, 54.1%], which is higher than the estimate made using only the information of the responders. This is a more logical result: unemployed are more likely to be home, and thus easier to reach.
 
 # Discussion
 
