--- a/SurveyFinalRcode.Rmd
+++ b/SurveyFinalRcode.Rmd
@@ -385,10 +385,9 @@ fullmodel$coefficients
 # Doesn't produce errors
 
 # Create new model without variables that constitute singularity errors:
-halffullmodel <- glm(NR ~ a_gor_dv + a_urban_dv + a_sex + a_dvage + 
+halffullmodel <- glm(NR ~ a_gor_dv + a_urban_dv + a_sex + a_racel_dv + a_employ + a_dvage + 
                        a_agegr5_dv + a_agegr10_dv + a_agegr13_dv + hh_size + n_child + 
                        hh_type, family = binomial, data = society)
-# we delete a_racel_dv and a_employ because it is only a good predictor because it includes 'missing'
 
 # model without any predictors
 emptymodel <- nothing <- glm(NR ~ 1, family=binomial, data = society )
@@ -412,38 +411,26 @@ formula(halfforwards)
 formula(halffullmodel)
 formula(halfbackwards)
 
-# forwards and backwards logistic regression lead to the same model! 
-
 # dive deeper into halfbackwards since this is our model of interest
 summary(halfbackwards)
+# significant variables are a_agegr13, hh_size, hh_type, sex, urban and a_gor
+# significant with p < .001 are sex, a_agegr13_dv and hh_size. plot those (see below)
 
-# evaluate backwards model compared with backwards regression/full model  
-anova(halfbackwards, emptymodel, test = "Chisq")  # backwards model does a better job at prediction than empty model. 
-anova(halfbackwards, halffullmodel, test = "Chisq") # backwards model does an equally good job at prediction as the full model. 
+# evaluate fit 
+fit <- anova(halfbackwards, halffullmodel)
+library(lmtest)
+test <- lrtest(halfbackwards,halffullmodel)
 
-# so we now belief that the following variables are predictors of non-response: 
-# a_racel_dv + a_agegr5_dv + a_agegr13_dv + hh_size + a_sex + 
-#     a_gor_dv + hh_type + a_urban_dv
-summary(halfbackwards)
-# significant variables are a_dvage, hh_size, hh_type, a_sex, a_urban_dv and a_gor_dv, n_child. 
-# significant with p < .001 B's come from variables a_sex, hh_size and hh_type (couple without children)
-```
-a_sex, hh_size and hh_type
+# interesting: a_agegr13_dv produces NA's for every category except 16-17 and 18-19 years old..? 
+# i tried to load all kinds of packages to compute a pseudo r squared but they didn't work.. 
 
-hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.32727) = 1.39. So perosns in larer households have more have a larger probability for nonresponse. 
-a_sex - for females, the odds of nonresponse are exp(-0.67411) =  compared to men. So women are ... less likely to nonrespond than men. 
-The model has very high (and unlikely) coefficients for a_agegr5_dv, this is something we unfortunately do not have the time for to further investigate although we notice that this is important. 
-hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251). 
-hh_type - the odds for nonresponse for couples without children decrease with exp(0.77833). Compared to the other householdtypes, odds of couples without children have the lowest chance at nonresponse.  
-
-
-```{r}
 # plot nonresponse 
 tbl <- table(society$NR)
 t1 <- tbl/3600*100 
 
 # plot relationship sex / nonresponse 
 t2 <- table(as.matrix(society$a_sex),as.matrix(society$NR)) # females respond more often then males do 
+
 plot(t2) 
 
 # plot relationship age / nonresponse 
@@ -453,8 +440,6 @@ plot(t3) # the higher the age category, the less nonresponse.
 
 # plot relationship hh_size / non response
 t4 <- table(society$hh_size, society$NR) # the bigger the household, the more nonresponders 
-plot(t4) 
 
-# plot relationship hh_type / non response 
-t5 <- table(society$NR, society$hh_type)
+plot(t4)
 ```
