--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -134,12 +134,18 @@ There are two stages of nonresponse we would have wanted to consider:
 
 However, as the levels of variable 'a_hhresp_dv' show, all households within the sample completed at least the household grid. We do not have any information about the 1271 adresses that were selected from the sampling frame but did not take part in an interview. Therefore, we only account for individual unit nonresponse, which occurred in 26.2% of the observations in the sample.
 
-The forwards stepwise logistic regression model shows us that the variables 'a_racel_dv', 'a_agegr5_dv', 'a_agegr13_dv', 'hh_size', 'a_sex', and 'a_urban_dv' are useful in predicting nonresponse. That is, a linear combination of variables indicating race, sex, and age of respondents in combination with living situation (urban or rural area, and household size) yield a significant prediction of the logit of the nonresponse indicator. A backward stepwise analysis also indicated the variables household type (hh_type) and government office region (a_gor_dv) could explain some additional variance in nonresponse. The variables 'a_employ', 'a_agegr10_dv', and 'n_child' were not included in the model based on the statistical decision criteria used in the stepwise logistic regression analysis. 
+The backwards stepwise regression leads to the same model of predicting nonresponse as the forward stepwise regression. The backwards model does a better job at prediction than an empty model (with only an intercept) and does an equally good job at predicting non-response rate as the full model (with all predictors). These analyses are based on Chi-squared testing. 
+anova(halfbackwards, halffullmodel, test = "Chisq") 
 
-Importantly, since this type of analysis is exploratory, no inferences will be drawn from these results. **The predictive accuracy of the stepwise model is ..., where for the full model this was ..**
-    
-We investigate the most important predictors individually: 
->>> plot relationships (I did a few analyses in the finalcode file but since the model isn't definitive I didn't write up any concluding remarks about them yet)
+The backwards stepwise logistic regression model shows us that the variables a_gor_dv + a_urban_dv + a_sex + a_dvage + a_agegr5_dv + a_agegr13_dv + hh_size + n_child + hh_type are useful in predicting nonresponse. That is, a linear combination of variables indicating sex, and age of respondents in combination with living situation (urban or rural area, and household size, type and numer of children) yield a significant prediction of the logit of the nonresponse indicator. Within this model, only the variables 'a_sex', 'hh_size', and 'hh_type' have a p-value smaller than .001 and therefore we take a closer look at them:
+
+hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251) = 1.72 So persons in larger households have more have a larger probability for nonresponse. 
+a_sex - for females, the odds of nonresponse are exp(-0.67411) = .51 compared to men. So women are less likely to nonrespond than men. 
+hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251) = 1.72. This means that people in larger households are more prone to nonrespond. 
+hh_type - the odds for nonresponse for couples without children decrease with exp(0.77833) = 2.18. Compared to the other householdtypes, odds of couples without children have the highest probability at nonresponse.  
+
+The model has very high (and unlikely) coefficients for a_agegr5_dv, this is something we unfortunately do not have the time for to further investigate although we notice that this is important. It could be that there is some interaction going on between the two age variables included. 
+Importantly, since this type of analysis is exploratory, no inferences will be drawn from these results. If you're interested in some exploratory plots of the response distribution of the individual variables in the regression equation, we refer you to the "SurveyFinalRcode" file. 
 
 ## Part III: Estimation
 
