--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -139,13 +139,13 @@ anova(halfbackwards, halffullmodel, test = "Chisq")
 
 The backwards stepwise logistic regression model shows us that the variables a_gor_dv + a_urban_dv + a_sex + a_dvage + a_agegr5_dv + a_agegr13_dv + hh_size + n_child + hh_type are useful in predicting nonresponse. That is, a linear combination of variables indicating sex, and age of respondents in combination with living situation (urban or rural area, and household size, type and numer of children) yield a significant prediction of the logit of the nonresponse indicator. Within this model, only the variables 'a_sex', 'hh_size', and 'hh_type' have a p-value smaller than .001 and therefore we take a closer look at them:
 
-hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251) = 1.72 So persons in larger households have more have a larger probability for nonresponse. 
 a_sex - for females, the odds of nonresponse are exp(-0.67411) = .51 compared to men. So women are less likely to nonrespond than men. 
 hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251) = 1.72. This means that people in larger households are more prone to nonrespond. 
 hh_type - the odds for nonresponse for couples without children decrease with exp(0.77833) = 2.18. Compared to the other householdtypes, odds of couples without children have the highest probability at nonresponse.  
 
-The model has very high (and unlikely) coefficients for a_agegr5_dv, this is something we unfortunately do not have the time for to further investigate although we notice that this is important. It could be that there is some interaction going on between the two age variables included. 
-Importantly, since this type of analysis is exploratory, no inferences will be drawn from these results. If you're interested in some exploratory plots of the response distribution of the individual variables in the regression equation, we refer you to the "SurveyFinalRcode" file. 
+The model has very high (and unlikely) coefficients for a_agegr5_dv, this is something we unfortunately do not have the time for to further investigate although we notice that this is important. It could be that there is some interaction going on between the two age variables included. If you're interested in some exploratory plots of the response distribution of the individual variables in the regression equation, we refer you to the "SurveyFinalRcode" file. 
+
+Importantly, since this type of analysis is exploratory, no inferences will be drawn from these results. A more thorough analysis could render more insight in these possible relationships. 
 
 ## Part III: Estimation
 
@@ -204,7 +204,7 @@ A third design was created to investigate this hypothesis, which excluded all ch
 
 In this report, nonresponse in the Innovation Panel study was investigated. To this end, we first investigated the sampling procedure and the prevalence of nonresponse, then the weights, and finally some population parameters were investigated.
 
-We found that 459 children under the age of 10 were included in the sample, but ineligible for interviews. There were 485 cases of (partial) nonresponse and 169 cases of by-proxy response.**Conclusion Q8** Another finding was that employed people are less likely to respond, which leads to a lower estimation of the proportion of employed adults in the population when nonresponders are excluded. The investigation into the relation between age and household composition yielded a confirmation of what was to be expected, with the proportion of households with children dropping when kids become adults, rising again when they get kids of their own, and then dropping again as their children become adults.
+We found that 459 children under the age of 10 were included in the sample, but ineligible for interviews. There were 485 cases of (partial) nonresponse and 169 cases of by-proxy response. Performing a stepwise regression on the nonresponse indicator reveals that household type, sex and household size might be important indicators for nonresponse. A more thorough analysis could render more insight in these possible relationships. Another finding was that employed people are less likely to respond, which leads to a lower estimation of the proportion of employed adults in the population when nonresponders are excluded. The investigation into the relation between age and household composition yielded a confirmation of what was to be expected, with the proportion of households with children dropping when kids become adults, rising again when they get kids of their own, and then dropping again as their children become adults.
 
 There are some points of note in this report. As discussed in RQ3 under Part II, the calculation of the adjusted design weights was not replicable due to the population parameters being not publicly available and the grouping of variables being unknown. While an approximation could be made using linear models, there is no way to know how the adjusted weights were calculated except by asking the researchers involved in this study personally. One could argue that this is bad: research should be replicable. However, the population parameters can be considered sensitive data, and are not publicly accessable because government agencies haven't made it publicly accessible. As such, it may be unrealistic to expect the parameters. Describing the groups but not the parameters would be a middle road solution to this problem. It makes it slightly easier for those without access to the population parameters to estimate them, but also makes the calculations replicable for those who do have access to these parameters. 
 
